Adding sources to send to frontend
* Adding source prop to the response from the AI to let AI response to be more transparent.

* Adding sources only if procedure context has urls

* Improved model response

* Tests done

* Use procedures on context on question

* Only links from procedures

* N invent on URLS and more context

* Cleanup code